fix img not showing

--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,10 @@ body {
   background-color: #444;
 }
 
+.hidden {
+  display: none;
+}
+
 @media (max-width: 580px) {
   .board {
     height: 37rem;
